--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!--DOCTYPE html-->
+<!DOCTYPE html>
 <html>
   <head>
     <title>Athena's First Web Page</title>
@@ -6,5 +6,6 @@
   <body>
     <h1>First Web Page</h1> 
     <p>Hello World!</p>
+    <p>Est. 2022</p>
   </body>
 </html>
